Add more translations and amend code as per PR.

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -401,4 +401,6 @@
     <string name="hideTipsText">Je jich jen pár a snažili jsme se udělat je informativní.</string>
     <string name="hideTipsButton">Navždy skrýt tipy</string>
 
+    <!-- Covid Cta-->
+    <string name="covidCtaText">Odebírejte oficiální informace a tipy o COVID-19.</string>
 </resources>
