--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,7 +1,5 @@
 ## What's new in this release?
-Now you can customize your app icon! Head over to settings to try it out.
-If you have more than 3 bookmarks, you can now search them!
-We've also improved the broken site report experience.
+In this release we added a quick way to get official information and tips about COVID-19.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
