--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -371,7 +371,7 @@
 
     <!-- Dax Dialog -->
     <string name="daxDialogHideButton">OCULTAR</string>
-    <string name="daxDialogPhew">¡Uf!</string>
+    <string name="daxDialogPhew">¡Genial!</string>
     <string name="daxDialogYes">¡OK!</string>
     <string name="daxDialogAddWidget">Añadir widget</string>
     <string name="daxDialogMaybeLater">Quizás más tarde</string>
@@ -386,23 +386,23 @@
     <!-- New Onboarding Experience -->
     <string name="onboardingWelcomeTitle">¡Bienvenido a DuckDuckGo!</string>
     <string name="onboardingDaxText">Internet puede ser un poco espeluznante.&lt;br/&gt;&lt;br/&gt;¡No te preocupes! Buscar y navegar en privado es más fácil de lo que piensas.</string>
-    <string name="onboardingLetsDoItButton">¡Hagámoslo!</string>
-    <string name="daxIntroCtaText">¡Después, intenta visitar uno de tus sitios favoritos!&lt;br/&gt;&lt;br/&gt;Bloquearé los rastreadores para que no puedan espiarte. También actualizaré la seguridad de tu conexión si es posible. &#128274;</string>
-    <string name="daxEndCtaText">¡Lo estás haciendo muy bien!&lt;br/&gt;&lt;br/&gt;Recuerda: cada vez que navegas conmigo un anuncio espeluznante es bloqueado. &#128077;</string>
+    <string name="onboardingLetsDoItButton">¡De acuerdo!</string>
+    <string name="daxIntroCtaText">¡A continuación, intenta visitar uno de tus sitios favoritos!&lt;br/&gt;&lt;br/&gt;Bloquearé los rastreadores para que no puedan espiarte. También haré tu conexión segura si es posible. &#128274;</string>
+    <string name="daxEndCtaText">¡Lo estás haciendo muy bien!&lt;br/&gt;&lt;br/&gt;Recuerda: cada vez que navegas conmigo, anuncios y rastreadores son bloqueados. &#128077;</string>
     <string name="daxSerpCtaText">Tus búsquedas con DuckDuckGo son anónimas y nunca almaceno tu historial de búsqueda. Nunca. &#128588;</string>
     <string name="daxDefaultBrowserCtaText">¡Antes de irme! &lt;br/&gt;&lt;br/&gt;¿Quieres protección contra rastreadores cuando abres enlaces desde otras aplicaciones? &lt;br/&gt;&lt;br/&gt;¡Haz de DuckDuckGo tu navegador predeterminado!</string>
     <string name="daxSearchWidgetCtaText">¡Qué forma de dominarlo! &lt;br/&gt;&lt;br/&gt;¡Busca en privado incluso más rápido! Añade el widget de búsqueda DuckDuckGo a tu pantalla de inicio.</string>
-    <string name="daxNonSerpCtaText">Cada sitio tiene un grado de privacidad. Toca para ver cómo protegí tu privacidad.&lt;br/&gt;&lt;br/&gt;¿Quieres algo más sofisticado? Intenta borrar tus datos presionando el botón de disparo.</string>
-    <string name="daxMainNetworkStep1CtaText">¡Aviso!&lt;br/&gt;&lt;br/&gt; %s ejecuta una red de rastreo importante.&lt;br/&gt;&lt;br/&gt;Un grado de privacidad bajo te llevará a sitios como este.</string>
-    <string name="daxMainNetworkStep1OwnedCtaText">¡Aviso!&lt;br/&gt;&lt;br/&gt; %s es propiedad de %s, que ejecuta una importante red de rastreo.</string>
-    <string name="daxMainNetworkStep21CtaText">De hecho, %s rastreadores acechan en aproximadamente %s de los mejores sitios. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
-    <string name="daxMainNetworkStep211CtaText">De hecho, %s rastreadores están al acecho en Internet. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxNonSerpCtaText">Cada sitio tiene un grado de privacidad. Toca para ver cómo protegí tu privacidad.&lt;br/&gt;&lt;br/&gt;¿Quieres algo más sofisticado? Prueba borrando tus datos presionando el botón de fuego.</string>
+    <string name="daxMainNetworkStep1CtaText">¡Aviso!&lt;br/&gt;&lt;br/&gt; %s posee una red de rastreo importante.&lt;br/&gt;&lt;br/&gt;Un grado de privacidad bajo te llevará a sitios como este.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">¡Aviso!&lt;br/&gt;&lt;br/&gt; %s es propiedad de %s, que posee una importante red de rastreo.</string>
+    <string name="daxMainNetworkStep21CtaText">De hecho, los rastreadores de %s acechan en aproximadamente %s de los mejores sitios. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">De hecho, los rastreadores de %s están al acecho en Internet. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
     <string name="daxMainNetworkStep2CtaText">%sBloquearé estos rastreadores cuando navegues en sitios que no sean %s.</string>
     <plurals name="daxTrackersBlockedCtaText">
-        <item quantity="one">y &lt;b&gt;%d más&lt;/b&gt; intentaban rastrearte aquí. &lt;br/&gt;&lt;br/&gt;¡Los bloqueé!&lt;br/&gt;&lt;br/&gt; ☝️Puedes consultar la barra de URL para ver quién está tratando de rastrearte cuando visitas un nuevo sitio.️</item>
-        <item quantity="other">y &lt;b&gt;%d más&lt;/b&gt; intentaban rastrearte aquí. &lt;br/&gt;&lt;br/&gt;¡Los bloqueé!&lt;br/&gt;&lt;br/&gt; ☝️Puedes consultar la barra de URL para ver quién está tratando de rastrearte cuando visitas un nuevo sitio.️</item>
+        <item quantity="one">&#160;y &lt;b&gt;%d más&lt;/b&gt; intentaban rastrearte aquí. &lt;br/&gt;&lt;br/&gt;¡Los he bloqueado!&lt;br/&gt;&lt;br/&gt; ☝️Puedes consultar la barra de navegación para ver quién está tratando de rastrearte cuando visitas un nuevo sitio.️</item>
+        <item quantity="other">&#160;y &lt;b&gt;%d más&lt;/b&gt; intentaban rastrearte aquí. &lt;br/&gt;&lt;br/&gt;¡Los he bloqueado!&lt;br/&gt;&lt;br/&gt; ☝️Puedes consultar la barra de navegación para ver quién está tratando de rastrearte cuando visitas un nuevo sitio.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">intentaba rastrearte aquí. &lt;br/&gt;&lt;br/&gt;¡Lo bloqueé!&lt;br/&gt;&lt;br/&gt; ☝️Puedes consultar la barra de URL para ver quién está tratando de rastrearte cuando visitas un nuevo sitio.️</string>
+    <string name="daxTrackersBlockedCtaZeroText">&#160;intentaba rastrearte aquí. &lt;br/&gt;&lt;br/&gt;¡Lo bloqueé!&lt;br/&gt;&lt;br/&gt; ☝️Puedes consultar la barra de URL para ver quién está tratando de rastrearte cuando visitas un nuevo sitio.️</string>
 
     <!-- Covid Cta-->
     <string name="covidCtaText">Obtén información y consejos oficiales sobre COVID-19.</string>
